--- a/StickyOnPage/AndroidManifest.xml
+++ b/StickyOnPage/AndroidManifest.xml
@@ -19,7 +19,6 @@
             android:name="MainActivity"
             android:label="@string/app_name" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="SopWebview"></activity>
         <activity android:name="SplashActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,6 +27,8 @@
         </activity>
         <activity android:name="com.facebook.LoginActivity"></activity>
         <activity android:name="LoginActivity"></activity>
+        <activity android:name="MemoCRUDActivity" android:theme="@android:style/Theme.Dialog"></activity>
+        <activity android:name="LoginWebView"></activity>
     </application>
 
 </manifest>
