--- a/StickyOnPage/AndroidManifest.xml
+++ b/StickyOnPage/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -15,10 +15,14 @@
         android:icon="@drawable/ic_sop"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        
         <activity
             android:name="MainActivity"
-            android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light" />
+        
         <activity android:name="SplashActivity"
             android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -26,10 +30,14 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.LoginActivity"></activity>
-        <activity android:name="LoginActivity"></activity>
-        <activity android:name="MemoCRUDActivity" android:theme="@android:style/Theme.Dialog"></activity>
-        <activity android:name="LoginWebView"></activity>
+        
+        <activity android:name="com.facebook.LoginActivity"/>
+        <activity android:name="LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity android:name="MemoCRUDActivity"
+            android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name="LoginWebView"/>
+        
     </application>
 
 </manifest>
