--- a/StickyOnPage/bin/AndroidManifest.xml
+++ b/StickyOnPage/bin/AndroidManifest.xml
@@ -5,29 +5,39 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_sop"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        
         <activity
             android:name="MainActivity"
-            android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="SopWebview"></activity>
-        <activity android:name="SplashActivity">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light" />
+        
+        <activity android:name="SplashActivity"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.LoginActivity"></activity>
-        <activity android:name="LoginActivity"></activity>
+        
+        <activity android:name="com.facebook.LoginActivity"/>
+        <activity android:name="LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity android:name="MemoCRUDActivity"
+            android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name="LoginWebView"/>
+        
     </application>
 
 </manifest>
